# algo

./: .gitignore  CMakeLists.txt  Naive_basic.c  README.md  build.sh  build_tests.sh
.github/workflows/: test-and-build.yml  test.yml
include/: data_processor.h
include/in/: csv_importer.h
include/io/: csv_importer.h  input_data_funcs.h  output_handler.h
include/math/: constraints.h  glp_utils.h  math_processor.h  preferences.h
include/ml/: ml_processor.h
input/: metadata.csv
output/: schedule_human.csv
scripts/: build_mac.sh  build_ubuntu.sh  build_windows.bat
src/: main.c
src/in/: csv_importer.c  input_data_funcs.c
src/io/: csv_importer.c  input_data_funcs.c  output_handler.c
src/math/: constraints.c  glp_utils.c  math_processor.c  math_utils.c  preferences.c
src/ml/: ml_processor.c
tests/: test_glp_utils.c  test_main.c  test_utils.h
tests/math/: test_glp_utils.c
